# efficientml

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  plan.md  pyproject.toml
evaluation/: evaluate_wikitext2.py  evaluation_report.py  readme.md  wikitext2_config.py
evaluation/results/rowwise_int4/: wikitext2_eval_full_quant.json  wikitext2_eval_full_quant.md  wikitext2_eval_skip_lm.json  wikitext2_eval_skip_lm.md  wikitext2_eval_skip_lm_head.json  wikitext2_eval_skip_lm_head.md
evaluation/results/rowwise_int4_asym/: wikitext2_eval_full_quant.json  wikitext2_eval_full_quant.md  (+2 more)
exp1/: README.md
model_inference/: llama_inference_config.py  llama_quantized_inference.py  readme.md
model_quantization/: quantized_linear.py
tests/: fixtures.py  test_llama_quantized_integration.py  test_matmul_int4.py  test_matmul_int4_asym.py  test_matmul_int4_gptq.py  test_quantize_kernel.py  test_quantize_kernel_asym.py  test_quantize_kernel_gptq.py  test_quantized_linear.py  test_triton_kernels.py
throughput_benchmark/: benchmark_config.py  benchmark_matmul.py  benchmark_report.py  benchmark_types.py  layers_throughput_measuring copy.ipynb  layers_throughput_measuring.ipynb  readme.md
throughput_benchmark/results/: matmul_benchmark.csv  matmul_benchmark.md
triton_kernels/: matmul_int4.py  matmul_int4_asym.py  matmul_int4_gptq.py  matmul_int4_sym.py  quantization_kernels.py  quantize_kernel.py  quantize_kernel_asym.py  quantize_kernel_gptq.py  quantize_kernel_sym.py  quantized_linear.py  readme.md
utils/: cuda.py  gptq_pipeline.py  memory.py  model.py
(+25 files in other folders)
