[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "efficientml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.*",
    "triton-viz==3.0",
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
