[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "efficientml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.*",
    "triton-viz==3.0",
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "transformers>=4.45",
    "datasets>=3.0.0",
    "tabulate>=0.10.0",
    "matplotlib>=3.10.8",
    "accelerate>=1.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
